--- a/assets/styles/header.less
+++ b/assets/styles/header.less
@@ -77,6 +77,11 @@
 
   &:not(.big-header) {
     //height: 0px;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
     #strapline-content {
       display: none;
     }
